Fix issue with spacing in posts list

--- a/app/assets/stylesheets/resources/posts/index.css.sass
+++ b/app/assets/stylesheets/resources/posts/index.css.sass
@@ -11,7 +11,9 @@
         color: $second-color
 
     .categories
-      margin: 10px 10px 10px 0
+      margin: 10px 0
+      a
+        margin-right: 10px
 
     .introduction
       margin-top: 10px
